src/sass/style.scss
/* ... */
// { Portfolio page
// { Contact page
.contact {
  position: relative;
  width: 100%;
  height: 100%;
  &__details,
  .form {
    position: relative;
    display: inline-block;
    width: 95%;
    vertical-align: top;
    font-size: em(28);
    line-height: 1.25;
    padding-bottom: em(40);
    @include respond-to($tablet-portrait) {
      width: 44%;
      margin-right: 3%;
    }
  }
  .form {
    font-size: em($browser-context);
    line-height: 1;
    padding-bottom: em(80);
    @include respond-to($tablet-portrait) {
      margin-right: 0;
      margin-left: 3%;
    }
    &__row {
      margin-top: em(10);
      position: relative;
      min-height: 80px;
      text-align: left;
    }
    input,
    textarea {
      font-family: 'Jura', sans-serif;
      color: #1b1b1b;
      background-color: transparent;
      border: none;
      border-bottom: 2px solid $border-input;
      border-radius: 0;
      outline: none;
      height: 2.5em;
      width: 100%;
      font-size: em(16);
      margin-bottom: em(20);
      padding: 0;
      -webkit-box-shadow: none;
      box-shadow: none;
      -webkit-box-sizing: content-box;
      box-sizing: content-box;
      text-indent: 15px;
      -webkit-transition: all 0.3s;
      transition: all 0.3s;
      &:focus {
        border-bottom: 2px solid $border-input-active;
      }
      &:focus+label {
        color: $border-input-active;
      }
    }
    textarea {
      height: 9.375em;
      margin: em(20) 0;
      border: 2px solid $border-input;
      padding: em(15);
      -webkit-box-sizing: border-box;
              box-sizing: border-box;
      overflow: auto;
      text-indent: 0;
      &:focus {
        border: 2px solid $border-input-active;
      }
    }
    label {
      position: absolute;
      left: 0;
      top: -1em;
      font-size: em(19);
      text-indent: 15px;
      color: $border-input;
      span {
        font-size: em(12);
      }
    }
    &__submit {
      position: relative;
      display: inline-block;
      vertical-align: middle;
      text-align: center;
      overflow: hidden;
      width: em(150);
      height: em(40);
      line-height: 2.45;
      border: 2px solid $border-input;
      font-weight: 600;
      cursor: pointer;
      outline: none;
      -webkit-transition-property: all;
      transition-property: all;
      -webkit-transition-duration: .6s;
              transition-duration: .6s;
      -webkit-transition-timing-function: ease;
              transition-timing-function: ease;
      &:after {
        background: #ACACAC;
        content: "";
        height: rem(155);
        left: rem(-75);
        opacity: .2;
        position: absolute;
        top: rem(-50);
        -webkit-transform: rotate(35deg);
                transform: rotate(35deg);
        -webkit-transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
        transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
        width: rem(50);
        z-index: 99;
      }
    }
    &__submit:hover,
    &__submit:focus {
      border: 2px solid $border-input-active;
      &:after {
        left: 120%;
        -webkit-transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
        transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
      }
    }
  }
}

.grecaptcha-badge {
  bottom: 5px !important;
}

// } Contact page
// } Main tag
.scrollup {
  position: fixed;
  text-align: right;
  left: 0;
  width: 100%;
  bottom: 20px;
  display: none;
  z-index: 999;
  &__link {
    padding-right: 1.5em;
  }
}

// { Footer
// A lot of borrowed code so I don't use BEM here
.footer {
  position: absolute;
  bottom: 0;
  margin-top: em(30);
  width: 100%;
  height: em(80);
  text-align: left;
  display: table;
}

.footer__icons {
  padding-left: rem(20);
  display: table-cell;
  vertical-align: middle;
  a {
    width: em(25);
    height: em(25);
    margin: 0 em(5);
    background: #171516;
    border-radius: em(50);
    display: inline-block;
    -webkit-transform: perspective(1px) translateZ(0);
    transform: perspective(1px) translateZ(0);
    -webkit-box-shadow: 0 0 1px transparent;
    box-shadow: 0 0 1px transparent;
  }
}

.footer__languages {
  float: right;
  padding: em(26) em(20);
  a {
    width: em(25);
    height: em(25);
    margin: 0 em(5);
    background: #171516;
    border-radius: em(50);
    display: inline-block;
    -webkit-transform: perspective(1px) translateZ(0);
    transform: perspective(1px) translateZ(0);
    -webkit-box-shadow: 0 0 1px transparent;
    box-shadow: 0 0 1px transparent;
  }
}

footer img {
  margin: 0 em(5);
  width: em(25);
  height: em(25);
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  -webkit-box-shadow: 0 0 1px transparent;
  box-shadow: 0 0 1px transparent;
}

.facebook-icon:after {
  content: "f";
  color: #ffffff;
  font: bold em(22) arial;
  position: absolute;
  left: em(6.2);
  top: em(1);
}

.linkedin-icon:after {
  content: "in";
  color: #ffffff;
  font: bold em(19) arial;
  position: absolute;
  left: em(4);
  top: em(2);
}

.footer__lang-icon div {
  color: #ffffff;
  font: bold em(12) arial;
  position: absolute;
  left: em(4);
  top: em(8);
}
/* ... */

